tests/vendor/valid/simple/local_var_missing_return.c
//expect 0
//tags: simple
int main() {
    int a = 3;
    a = a + 5;
}