tests/vendor/invalid/semantics/postfix_incr_non_lvalue.c
//tags: simple, increment
int main() {
    int a = 0;
    (a = 4)++;
}